[package]
name = "dss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.2", default-features = false, features = ["client", "gateway", "model", "rustls_backend"]}
dotenv = "0.15.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
std2 = "0.1.0"
scraper = "0.13.0"
lazy_static = "1.4.0"
regex = "1.5.6"